Wrap lines in <pre>, when printing. fixes #6

--- a/css/main.css
+++ b/css/main.css
@@ -53,20 +53,20 @@ body {
 /*body*/
 .background-image a {
   text-decoration: none;
-  background-image: linear-gradient(to bottom, transparent 50%, #666666 50%);
+  background-image: linear-gradient(to bottom, transparent 50%, #666 50%);
   background-repeat: repeat-x;
   background-size: 2px 2px;
   /** if >1em will not be visible */
   background-position: 0 0.975em; }
   .background-image a:link {
-    color: #3636e2;
-    background-image: linear-gradient(to bottom, transparent 50%, #3636e2 50%); }
+    color: #3636E2;
+    background-image: linear-gradient(to bottom, transparent 50%, #3636E2 50%); }
   .background-image a:visited {
-    color: #9b3d9b;
+    color: #9B3D9B;
     /* Unfortunatelly, browsers are unwilling to set :visited styles
      * other than color to avoid stealing visited URLs by malicious
      * scripts */
-    background-image: linear-gradient(to bottom, transparent 50%, #9b3d9b 50%); }
+    background-image: linear-gradient(to bottom, transparent 50%, #9B3D9B 50%); }
   .background-image a:active, .background-image a:focus {
     color: red;
     background-image: linear-gradient(to bottom, transparent 50%, red 50%); }
@@ -100,14 +100,14 @@ body {
   .header__title a, .background-image .header__title a {
     text-decoration: none;
     background-image: none;
-    color: #990000; }
+    color: #900; }
   .background-image .header__title a span {
     background-size: 0.03em 0.03em;
     background-repeat: repeat-x;
     /** if >1em will not be visible */
     background-position: 0 0.975em; }
   .background-image .header__title a:hover span, .background-image .header__title a:focus span {
-    background-image: linear-gradient(to bottom, transparent 50%, #990000 50%); }
+    background-image: linear-gradient(to bottom, transparent 50%, #900 50%); }
 
 .header__title b {
   font: 0.9em Source Code Pro, monospace; }
@@ -159,7 +159,7 @@ body {
 
 .post__meta time,
 .posts__list time {
-  color: #555555; }
+  color: #555; }
 
 .post__tags,
 .post__tags p,
@@ -183,7 +183,7 @@ body {
   content: '⋯';
   display: block;
   text-align: center;
-  color: #555555;
+  color: #555;
   font-size: 2em;
   margin: 1.33333em 0; }
 
@@ -303,12 +303,17 @@ pre,
   margin: -1em -1em; }
 
 pre {
-  /* [4] */
-  display: block;
-  display: inline-block;
-  min-width: 100%;
   /* [2] */
   padding: 1em 1em; }
+  @media screen {
+    pre {
+      /* [4] */
+      display: block;
+      display: inline-block;
+      min-width: 100%; } }
+  @media print {
+    pre {
+      white-space: pre-wrap; } }
 
 .highlight > pre {
   /* [3] */
@@ -577,3 +582,5 @@ pre.terminal {
   color: #009999; }
 
 /*# sourceMappingURL=syntax.css.map */
+
+/*# sourceMappingURL=main.css.map */
